@@ -1,3 +1,5 @@
+- Added QueryResultTransformer modifier to allow setting a results transformer.
+
 - Applied patch from Patrick Steele adding support for DiscriminatorLength in mappings. 
 
 - Added support for validating nested properties. 
